src/objects/Financing_Terms__c.object
<CustomObject>
    <description>This is a related object to Opportunities where the Opportunity Amount is being financed by a third party.</description>
    <fields>
        <fullName>Financing_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the financing partner</description>
        <inlineHelpText>Please enter the name of the Financing Partner.</inlineHelpText>
        <label>Financing Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Financing Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financing Terms</relationshipLabel>
        <relationshipName>Financing_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Financing_Partner__c</fullName>
        <description>This is the link between the Opportunity and the Financing Partner</description>
        <label>Opportunity Financing Partner</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financing Terms</relationshipLabel>
        <relationshipName>Financing_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>What is the amount of this payment?</description>
        <inlineHelpText>Enter the amount of this payment</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <description>The due date for a payment for a financed Opportunity.</description>
        <inlineHelpText>Please enter the due date for this payment.</inlineHelpText>
        <label>Payment Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Financing Terms</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Financing Terms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financing Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>